plugins {
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.apache.logging.log4j:log4j:2.17.1"
    implementation "com.google.guava:guava:31.0.1-jre"
    implementation 'com.google.code.gson:gson:2.9.0'
    implementation 'org.codehaus.groovy:groovy-all:3.0.13'
}

test {
    useJUnitPlatform()
}
sourceCompatibility = JavaVersion.VERSION_15
targetCompatibility = JavaVersion.VERSION_15
